Added pictures to slider

--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -73,16 +73,16 @@
 
           <!--slide images start-->
           <div class="slide first">
-            <img src="/images/imgage slider/1.jpg" alt="" />
+            <img src="https://staubtornado.github.io/kotmasters/images/about/1.jpg" alt="" />
           </div>
           <div class="slide">
-            <img src="/images/imgage slider/2.jpg" alt="" />
+            <img src="https://staubtornado.github.io/kotmasters/images/about/2.jpg" alt="" />
           </div>
           <div class="slide">
-            <img src="/images/imgage slider/3.jpg" alt="" />
+            <img src="https://staubtornado.github.io/kotmasters/images/about/3.jpg" alt="" />
           </div>
           <div class="slide">
-            <img src="/images/imgage slider/4.jpg" alt="" />
+            <img src="https://staubtornado.github.io/kotmasters/images/about/4.jpg" alt="" />
           </div>
           <!--slide images end-->
 
