testing text on about page

--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -16,6 +16,12 @@
 
   <body>
     <h1 class="about_h">Unsere Ziele</h1>
+    <p class="vorstellung">Wir sind ein kleines deutsches Weichwaren-Entwickler-Startup aus dem Raum Diez (RLP) <br>
+      und haben Großes vor: Mit unserem dreiköpfigen Entwicklerteam wir rund um die Uhr an Ihren Auftägen. <br> <br>
+      Mit der Gründung unserem Unternehmen im September des Jahres 2021 wurde der Startschuss zur Marktführung gegeben und seit jenem Tag arbeiten wir daran unsere Fähigkeiten für Sie zu verbessern.
+      Mit unseren weitgefächerten Fähigkeitsbereichen unserer Mitarbeiter decken wir alles ab, was für Webdesign, Sofwareentwicklung und Spielentwicklung benötigt. <br>
+      Mit viel Ehrgeiz und Vorfreude auf neue Projekte freuen wir uns auf Ihr Projektanfarge. <br>
+      </p>
 
     <h1 class="about_h">Das ist unsere Führungsebene</h1>
 
