added css for text on about

--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -19,7 +19,7 @@
     <p class="vorstellung">Wir sind ein kleines deutsches Weichwaren-Entwickler-Startup aus dem Raum Diez (RLP). <br>
       und haben Großes vor: Mit unserem dreiköpfigen Entwicklerteam wir rund um die Uhr an Ihren Auftägen. <br> <br>
       Mit der Gründung unserem Unternehmen im September des Jahres 2021 wurde der Startschuss zur Marktführung gegeben <br>
-      und seit jenem Tag arbeiten wir daran unsere Fähigkeiten für Sie zu verbessern.
+      und seit jenem Tag arbeiten wir daran unsere Fähigkeiten für Sie zu verbessern. <br>
       Mit unseren weitgefächerten Fähigkeitsbereichen unserer Mitarbeiter decken wir alles ab, was für Webdesign, Sofwareentwicklung und Spielentwicklung benötigt. <br>
       Mit viel Ehrgeiz und Vorfreude auf neue Projekte freuen wir uns auf Ihr Projektanfarge. <br>
       </p>
