added max' titel

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
         alt="dahin kommen noch imgs"
       />
       <div class="content">
-        <p class="about_p"><em>Master of Design</em>: Max aka. "Discera"</p>
+        <p class="about_p"><em>Master of Design</em> und <em>Communitymanager</em>: Max aka. "Discera"</p>
       </div>
     </div>
 
