Added project descriptions on main page

--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
 
   <ul class="short_summary">
     <li>
-      <img src="https://staubtornado.github.io/kotmasters/images/projects/project_1.png" alt="project_1"><a class="short_summary__font" href=""><strong>Offizielle Website</strong><br>Our website, build with passion and love. Current version: V1</a>
+      <img src="https://staubtornado.github.io/kotmasters/images/projects/project_1.png" alt="project_1"><a class="short_summary__font" href=""><strong>Offizielle Website</strong><br>Unsere offizielle Website, welche planmäßig Anfang 2022 fertiggestellt wird. <h6>Sprachen:<br>HTML, CSS, JavaScript</h6><h6>Tools:<br>Visual Studio Code, GitHub Pages</h6></a>
     </li>
     
-      <li><img src="https://staubtornado.github.io/kotmasters/images/projects/project_2.png" alt="project_2"><a class="short_summary__font" href=""><strong>Werterechner</strong></a>Calculator like Nullstellen, Quersumme, Fakultät, BMI, Geldrückgabe, Sinusfunktion, Addierung, Versandkosten und Zinsrechner.</li>
+      <li>
+        <img src="https://staubtornado.github.io/kotmasters/images/projects/project_2.png" alt="project_2"><a class="short_summary__font" href=""><strong>Werterechner</strong><br>Ein ultimativer Werterechner, welche Nullstellen, Quersummen, Fakultät, BMI etc. berechnen kann.<h6>Sprachen:<br>Java</h6><h6>Tools:<br>IntelliJ IDEA</h6></a>
+      </li>
   </ul>
   
 </body>    
