--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -16,13 +16,14 @@
 
   <body>
     <h1 class="about_h">Unsere Ziele</h1>
-    <p class="vorstellung">Wir sind ein kleines deutsches Weichwaren-Entwickler-Startup aus dem Raum Diez (RLP). <br>
+    <p class="vorstellung"> Wir sind ein kleines deutsches Weichwaren-Entwickler-Startup aus dem Raum Diez (RLP) <br>
       und haben Großes vor: Mit unserem dreiköpfigen Entwicklerteam wir rund um die Uhr an Ihren Auftägen. <br> <br>
+      
       Mit der Gründung unserem Unternehmen im September des Jahres 2021 wurde der Startschuss zur Marktführung gegeben <br>
       und seit jenem Tag arbeiten wir daran unsere Fähigkeiten für Sie zu verbessern. <br>
       Mit unseren weitgefächerten Fähigkeitsbereichen unserer Mitarbeiter decken wir alles ab, was für Webdesign, Sofwareentwicklung und Spielentwicklung benötigt. <br>
-      Mit viel Ehrgeiz und Vorfreude auf neue Projekte freuen wir uns auf Ihr Projektanfarge. <br>
-      </p>
+      Mit viel Ehrgeiz und Vorfreude auf neue Projekte freuen wir uns auf Ihr Projektanfarge. 
+    </p>
 
     <h1 class="about_h">Das ist unsere Führungsebene</h1>
 
@@ -47,7 +48,7 @@
         alt="dahin kommen noch imgs"
       />
       <div class="content">
-        <p class="about_p"><em>Master of Design</em>: Max aka. "Discera"</p>
+        <p class="about_p"><em>Master of Design</em> und <em>Communitymanager</em>: Max aka. "Discera"</p>
       </div>
     </div>
 
@@ -80,16 +81,16 @@
 
           <!--slide images start-->
           <div class="slide first">
-            <img src="https://staubtornado.github.io/kotmasters/images/about/1.jpg" alt="" />
+            <img src="/images/imgage slider/1.jpg" alt="" />
           </div>
           <div class="slide">
-            <img src="https://staubtornado.github.io/kotmasters/images/about/2.jpg" alt="" />
+            <img src="/images/imgage slider/2.jpg" alt="" />
           </div>
           <div class="slide">
-            <img src="https://staubtornado.github.io/kotmasters/images/about/3.jpg" alt="" />
+            <img src="/images/imgage slider/3.jpg" alt="" />
           </div>
           <div class="slide">
-            <img src="https://staubtornado.github.io/kotmasters/images/about/4.jpg" alt="" />
+            <img src="/images/imgage slider/4.jpg" alt="" />
           </div>
           <!--slide images end-->
 
@@ -133,6 +134,10 @@
     <h1 class="about_h">
       Unser Tochterunternehmen <em> "Kotmasters-Gaming"</em>
     </h1>
+    <p class="vorstellung">
+      Interessiert in <em>Kot-Gaming</em>?. <br>
+      Dann schau bei unseren Freunden auf <a href="#"></a>  
+    </p>
   </body>
 
   <footer class="footer">
