--- a/index.html
+++ b/index.html
@@ -8,14 +8,20 @@
         content="Offizielles Impressum von Kostmasters."
     />
 <link rel="stylesheet" href="stylesheet.css">
-<link rel="stylesheet" href="contactButton.css">    
+<link rel="stylesheet" href="contactButton.css"> 
+<link rel="stylesheet" href="whitemode.css">    
 </head>
 
 <header>
   <script src="loadHeader.js"></script>
 </header>
-
+    <button onclick="whiteMode()"> Whitemode </button>
 <body>
+  <script>function whiteMode() {
+  document.getElementById("mode").href = "whitemode.css";
+          
+}
+    </script>
   
   <p class="infotext">
     Willkommen auf der Seite der Kotmasters. Wir sind ein deutsches Entwicklerstudio und arbeiten seit unserer Gründung im September 2021 an kleinen Java Programmen, Python Skripten und Webdesign mit HTML und CSS. Ab 2022 planen wir einen Einstieg in die Spieleindustrie und ab 2025 wollen wir Vorreiter in der deutschsprachigen Spiele- und Softwareentwicklung sein. Weitere Informationen findest du 
