--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     />
 <link rel="stylesheet" href="stylesheet.css">
 <link rel="stylesheet" href="contactButton.css"> 
-<link rel="stylesheet" href="whitemode.css">    
+<link rel="stylesheet" href="whitemode.css"> 
+    <link id="mode" rel="stylesheet" href="">
 </head>
 
 <header>
