--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -17,13 +17,14 @@
   <body>
     <h1 class="about_h">Unsere Ziele</h1>
     <p class="vorstellung"> Wir sind ein kleines deutsches Weichwaren-Entwickler-Startup aus dem Raum Diez (RLP) <br>
-      und haben Großes vor: Mit unserem dreiköpfigen Entwicklerteam wir rund um die Uhr an Ihren Auftägen. <br> <br>
+      und haben Großes vor: Mit unserem dreiköpfigen Entwicklerteam arbeiten wir rund um die Uhr an Ihren Aufträgen. <br> <br>
       
       Mit der Gründung unserem Unternehmen im September des Jahres 2021 wurde der Startschuss zur Marktführung gegeben <br>
       und seit jenem Tag arbeiten wir daran unsere Fähigkeiten für Sie zu verbessern. <br>
-      Mit unseren weitgefächerten Fähigkeitsbereichen unserer Mitarbeiter decken wir alles ab, was für Webdesign, Sofwareentwicklung und Spielentwicklung benötigt. <br>
-      Mit viel Ehrgeiz und Vorfreude auf neue Projekte freuen wir uns auf Ihr Projektanfarge. 
+      Mit unseren weitgefächerten Fähigkeitsbereichen unserer Mitarbeiter decken wir alles ab, was für Webdesign, Softwareentwicklung und Spielentwicklung benötigt. <br>
+      Mit viel Ehrgeiz und Vorfreude auf neue Projekte freuen wir uns auf Ihr Projektanfrage. 
     </p>
+
 
     <h1 class="about_h">Das ist unsere Führungsebene</h1>
 
