--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
    
 <body>
 
-  
   <p class="infotext">
     Willkommen auf der Seite der Kotmasters. Wir sind ein deutsches Entwicklerstudio und arbeiten seit unserer Gründung im September 2021 an kleinen Java Programmen, Python Skripten und Webdesign mit HTML und CSS. Ab 2022 planen wir einen Einstieg in die Spieleindustrie und ab 2025 wollen wir Vorreiter in der deutschsprachigen Spiele- und Softwareentwicklung sein. Weitere Informationen findest du 
       <a href="https://staubtornado.github.io/kotmasters/content/pages/about.html"><u>hier</u></a>.
@@ -27,11 +26,29 @@
 
   <ul class="short_summary">
     <li>
-      <img src="https://staubtornado.github.io/kotmasters/images/projects/project_1.png" alt="project_1"><a class="short_summary__font" href=""><strong>Offizielle Website</strong><br>Unsere offizielle Website, welche planmäßig Anfang 2022 fertiggestellt wird. <h6>Sprachen:<br>HTML, CSS, JavaScript</h6><h6>Tools:<br>Visual Studio Code, GitHub Pages</h6></a>
+      <img src="https://staubtornado.github.io/kotmasters/images/projects/project_1.png" alt="project_1">
+      <div>
+        <h3>Offizielle Website</h3>
+        Unsere offizielle Website, welche planmäßig Anfang 2022 fertiggestellt wird.
+        <h6>Sprachen:</h6>
+          <div>HTML, CSS, JavaScript</div>
+        <h6>Tools:</h6>
+          <div>Visual Studio Code, GitHub Pages</div>
+        <a href=""></a><button>View Project ></button>
+      </div>
     </li>
     
       <li>
-        <img src="https://staubtornado.github.io/kotmasters/images/projects/project_2.png" alt="project_2"><a class="short_summary__font" href=""><strong>Werterechner</strong><br>Ein ultimativer Werterechner, welche Nullstellen, Quersummen, Fakultät, BMI etc. berechnen kann.<h6>Sprachen:<br>Java</h6><h6>Tools:<br>IntelliJ IDEA</h6></a>
+        <img src="https://staubtornado.github.io/kotmasters/images/projects/project_2.png" alt="project_2">
+        <div>
+          <h3>Werterechner</h3>
+          Ein ultimativer Werterechner, welche Nullstellen, Quersummen, Fakultät, BMI etc. berechnen kann.
+          <h6>Sprachen:</h6>
+            <div>Java</div>
+          <h6>Tools:</h6>
+            <div>IntelliJ IDEA</div>
+          <a href=""></a><button>View Project ></button>
+        </div>
       </li>
   </ul>
   
