fixed map on contact

--- a/content/pages/contact.html
+++ b/content/pages/contact.html
@@ -2,7 +2,7 @@
 
 <head>
     <script src="https://staubtornado.github.io/kotmasters/loadHead.js"></script>
-    <link rel="stylesheet" href="/kotmasters-main/contact.css">
+    <link rel="stylesheet" href="/contact.css">
     <meta name="description"
         content="Welcome to Contact the KOT. Dies ist die offizielle Kotmasters conactpage. Erkunden Sie unsere Location und wie Sie zu Uns finden." />
     <title>Contact|Kotmasters</title>
@@ -13,12 +13,9 @@
 </header>
 
 <body>
-    <h1>Unsere Location</h1>
-
-    <div class="map" >
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d756.5759411803051!2d8.019309619597607!3d50.37013476467572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bdcd3dfa58ecdd%3A0x4b2388fc734e196e!2sBahnhof%20Diez!5e0!3m2!1sde!2sde!4v1638355126513!5m2!1sde!2sde" class="test"></iframe>
-    </div> 
-
+    <h1 class="location_heading">Unsere Location</h1>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d636.1972324659109!2d8.0196685!3d50.3704901!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bdcd3dfa58ecdd%3A0x4b2388fc734e196e!2sBahnhof%20Diez!5e0!3m2!1sde!2sde!4v1638374783525!5m2!1sde!2sde"
+         width="100%" height="369px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     <h2>TESTTTTTTT NUTETTETETTETE</h2>
 
 </body>
