Improved projects CSS and moved all project-related CSS to projects.css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         content="Offizielles Impressum von Kostmasters."
     />
 <link rel="stylesheet" href="stylesheet.css">
-<link rel="stylesheet" href="contactButton.css"> 
+<link rel="stylesheet" href="contactButton.css">
+<link rel="stylesheet" href="projects.css">
 
 </head>
 
@@ -29,7 +30,7 @@
       <img src="https://staubtornado.github.io/kotmasters/images/projects/project_1.png" alt="project_1">
       <div>
         <h3>Offizielle Website</h3>
-        Unsere offizielle Website, welche planmäßig Anfang 2022 fertiggestellt wird.
+        <p>Unsere offizielle Website, welche planmäßig Anfang 2022 fertiggestellt wird.</p>
         <h6>Sprachen:</h6>
           <div>HTML, CSS, JavaScript</div>
         <h6>Tools:</h6>
@@ -42,7 +43,7 @@
         <img src="https://staubtornado.github.io/kotmasters/images/projects/project_2.png" alt="project_2">
         <div>
           <h3>Werterechner</h3>
-          Ein ultimativer Werterechner, welche Nullstellen, Quersummen, Fakultät, BMI etc. berechnen kann.
+          <p>Ein ultimativer Werterechner, welche Nullstellen, Quersummen, Fakultät, BMI etc. berechnen kann.</p> 
           <h6>Sprachen:</h6>
             <div>Java</div>
           <h6>Tools:</h6>
