Replaced some project images, added 1 new project and one filler, made adjustments to the project CSS style and added a header for the projects

--- a/index.html
+++ b/index.html
@@ -18,16 +18,21 @@
 </header>
    
 <body>
-
   <p class="infotext">
     Willkommen auf der Seite der Kotmasters. Wir sind ein deutsches Entwicklerstudio und arbeiten seit unserer Gründung im September 2021 an kleinen Java Programmen, Python Skripten und Webdesign mit HTML und CSS. Ab 2022 planen wir einen Einstieg in die Spieleindustrie und ab 2025 wollen wir Vorreiter in der deutschsprachigen Spiele- und Softwareentwicklung sein. Weitere Informationen findest du 
       <a href="https://staubtornado.github.io/kotmasters/content/pages/about.html"><u>hier</u></a>.
       <div class="infotext__unterschrift">- Kotmasters 2021</div>
   </p> 
 
+  <div class="description">
+    <h2 >Populäre Projecte</h2>
+    <a href="">Alle anzeigen</a>
+  </div>
+  
+
   <ul class="short_summary">
     <li>
-      <img src="https://staubtornado.github.io/kotmasters/images/projects/project_1.png" alt="project_1">
+      <img src="/images/projects/project_1.png" alt="project_1">
       <div>
         <h3>Offizielle Website</h3>
         <p>Unsere offizielle Website, welche planmäßig Anfang 2022 fertiggestellt wird.</p>
@@ -35,12 +40,12 @@
           <div>HTML, CSS, JavaScript</div>
         <h6>Tools:</h6>
           <div>Visual Studio Code, GitHub Pages</div>
-        <a href=""></a><button>View Project ></button>
+        <a href=""><button>View Project ></button></a>
       </div>
     </li>
     
       <li>
-        <img src="https://staubtornado.github.io/kotmasters/images/projects/project_2.png" alt="project_2">
+        <img src="/images/projects/project_2.png" alt="project_2">
         <div>
           <h3>Werterechner</h3>
           <p>Ein ultimativer Werterechner, welche Nullstellen, Quersummen, Fakultät, BMI etc. berechnen kann.</p> 
@@ -48,9 +53,39 @@
             <div>Java</div>
           <h6>Tools:</h6>
             <div>IntelliJ IDEA</div>
-          <a href=""></a><button>View Project ></button>
+          <a href=""><button>View Project ></button></a>
         </div>
       </li>
+
+  </ul>
+
+  <ul class="short_summary">
+    <li>
+      <img src="/images/projects/project_3.png" alt="project_1">
+      <div>
+        <h3>11 BGI - Bot</h3>
+        <p>Offizieller Bot für den Klassenserver auf Discord. Beinhaltet Spiele wie Hangman oder TicTacToe, ein Levelsystem und Statistiken.</p>
+        <h6>Sprachen:</h6>
+          <div>Python 3.9.7</div>
+        <h6>Tools:</h6>
+          <div>PyCharm</div>
+        <a href="https://github.com/Staubtornado/11-BGI-Bot"><button>View Project ></button></a>
+      </div>
+    </li>
+    
+      <li>
+        <img src="/images/projects/project_2.png" alt="project_2">
+        <div>
+          <h3>Werterechner</h3>
+          <p>Ein ultimativer Werterechner, welche Nullstellen, Quersummen, Fakultät, BMI etc. berechnen kann.</p> 
+          <h6>Sprachen:</h6>
+            <div>Java</div>
+          <h6>Tools:</h6>
+            <div>IntelliJ IDEA</div>
+          <a href=""><button>View Project ></button></a>
+        </div>
+      </li>
+
   </ul>
   
 </body>    
