--- a/content/pages/contact.html
+++ b/content/pages/contact.html
@@ -13,10 +13,28 @@
 </header>
 
 <body>
-    <h1 class="location_heading">Unsere Location</h1>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d636.1972324659109!2d8.0196685!3d50.3704901!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bdcd3dfa58ecdd%3A0x4b2388fc734e196e!2sBahnhof%20Diez!5e0!3m2!1sde!2sde!4v1638374783525!5m2!1sde!2sde"
-         width="100%" height="369px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    <h2>TESTTTTTTT NUTETTETETTETE</h2>
+    <h1 class="heading">Unsere Location</h1>
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d636.1972324659109!2d8.0196685!3d50.3704901!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bdcd3dfa58ecdd%3A0x4b2388fc734e196e!2sBahnhof%20Diez!5e0!3m2!1sde!2sde!4v1638374783525!5m2!1sde!2sde"
+        width="100%" height="369px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+    <h1 class="heading">Contact us</h1>
+         
+    <fieldset>
+        <br>
+        <input name="name" type="text" size="30" placeholder="Name:">
+        <br>
+        <input name="betreff" type="text" size="30" placeholder="Betreff:">
+        <br>
+    </fieldset>    
+
+    <fieldset>  
+        <textarea name="nachricht" cols="40" rows="20" placeholder="Nachricht hier:"></textarea>
+    </fieldset>
+
+    <fieldset>
+        <button type="senden" class="sende_btn" value="Senden">Senden</button>
+    </fieldset>
 
 </body>
 
