Replaced filler project with a new one, added a project image and made adjustments to the CSS of the projects in index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="https://staubtornado.github.io/kotmasters/loadHead.js"></script>
+    <!-- <script src="https://staubtornado.github.io/kotmasters/loadHead.js"></script> -->
 
     <meta
         name="description"
@@ -25,7 +25,7 @@
   </p> 
 
   <div class="description">
-    <h2 >Populäre Projecte</h2>
+    <h2 >Populäre Projekte</h2>
     <a href="">Alle anzeigen</a>
   </div>
   
@@ -74,14 +74,14 @@
     </li>
     
       <li>
-        <img src="/images/projects/project_2.png" alt="project_2">
+        <img src="/images/projects/project_4.png" alt="project_2">
         <div>
-          <h3>Werterechner</h3>
-          <p>Ein ultimativer Werterechner, welche Nullstellen, Quersummen, Fakultät, BMI etc. berechnen kann.</p> 
+          <h3>Musik - Bot</h3>
+          <p>Ein ultimativer Musikbot, welcher Spotify- und YouTube Musikstreaming auf Discord erlaubt. Höre Topsongs von Künstlern, Playlists, Albums und einzelne Songs ohne Werbung direkt per Link.</p> 
           <h6>Sprachen:</h6>
-            <div>Java</div>
+            <div>Python 3.9.7</div>
           <h6>Tools:</h6>
-            <div>IntelliJ IDEA</div>
+            <div>PyCharm, ffmpeg</div>
           <a href=""><button>View Project ></button></a>
         </div>
       </li>
