--- a/content/pages/contact.html
+++ b/content/pages/contact.html
@@ -1,45 +1,77 @@
 <html lang="en">
-
-<head>
+  <head>
     <script src="https://staubtornado.github.io/kotmasters/loadHead.js"></script>
-    <link rel="stylesheet" href="/contact.css">
-    <meta name="description"
-        content="Welcome to Contact the KOT. Dies ist die offizielle Kotmasters conactpage. Erkunden Sie unsere Location und wie Sie zu Uns finden." />
+    <link rel="stylesheet" href="/contact.css" />
+    <link rel="stylesheet" href="/styles/sendbutton.css" />
+    <meta
+      name="description"
+      content="Welcome to Contact the KOT. Dies ist die offizielle Kotmasters conactpage. Erkunden Sie unsere Location und wie Sie zu Uns finden."
+    />
     <title>Contact|Kotmasters</title>
-</head>
+  </head>
 
-<header>
+  <header>
     <script src="https://staubtornado.github.io/kotmasters/loadHeader.js"></script>
-</header>
+  </header>
 
-<body>
+  <body>
     <h1 class="heading">Unsere Location</h1>
 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d636.1972324659109!2d8.0196685!3d50.3704901!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bdcd3dfa58ecdd%3A0x4b2388fc734e196e!2sBahnhof%20Diez!5e0!3m2!1sde!2sde!4v1638374783525!5m2!1sde!2sde"
-        width="100%" height="369px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d636.1972324659109!2d8.0196685!3d50.3704901!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bdcd3dfa58ecdd%3A0x4b2388fc734e196e!2sBahnhof%20Diez!5e0!3m2!1sde!2sde!4v1638374783525!5m2!1sde!2sde"
+      width="100%"
+      height="369px"
+      style="border: 0"
+      allowfullscreen=""
+      loading="lazy"
+    ></iframe>
 
     <h1 class="heading">Contact us</h1>
-         
-    <fieldset>
-        <br>
-        <input name="name" type="text" size="30" placeholder="Name:">
-        <br>
-        <input name="betreff" type="text" size="30" placeholder="Betreff:">
-        <br>
-    </fieldset>    
 
-    <fieldset>  
-        <textarea name="nachricht" cols="40" rows="20" placeholder="Nachricht hier:"></textarea>
+    <fieldset>
+      <br />
+      <input name="name" type="text" size="30" placeholder="Name:" />
+      <br />
+      <input name="betreff" type="text" size="30" placeholder="Betreff:" />
+      <br />
     </fieldset>
 
     <fieldset>
-        <button type="senden" class="sende_btn" value="Senden">Senden</button>
+      <textarea
+        name="nachricht"
+        cols="40"
+        rows="20"
+        placeholder="Nachricht hier:"
+      ></textarea>
     </fieldset>
 
-</body>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        var btn = document.querySelector(".button"),
+          loader = document.querySelector(".loader"),
+          check = document.querySelector(".check");
 
-<footer class="footer">
+        btn.addEventListener("click", function () {
+          loader.classList.add("active");
+        });
+
+        loader.addEventListener("animationend", function () {
+          check.classList.add("active");
+        });
+      });
+    </script>
+
+    <button class="button">Send</button>
+    <div class="loader">
+      <div class="check">
+        <span class="check-one"></span>
+        <span class="check-two"></span>
+      </div>
+    </div>
+    
+  </body>
+
+  <footer class="footer">
     <script src="https://staubtornado.github.io/kotmasters/loadFooter.js"></script>
-</footer>
-
+  </footer>
 </html>
