Replaced links with driect links

--- a/content/legal/datenschutzerklaerung.html
+++ b/content/legal/datenschutzerklaerung.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-    <script src="https://staubtornado.github.io/kotmasters/loadHead.js"></script>
+    <script src="../../loadHead.js"></script>
 
     <meta
         name="description"
@@ -9,7 +9,7 @@
 </head>
 
 <header>    
-    <script src="https://staubtornado.github.io/kotmasters/loadHeader.js"></script> 
+    <script src="../../loadHeader.js"></script> 
 </header>
 
 <body>
@@ -94,7 +94,7 @@
 </body>
 
 <footer class="footer">
-    <script src="https://staubtornado.github.io/kotmasters/loadFooter.js"></script> 
+    <script src="../../loadFooter.js"></script> 
 </footer>
 
 </html>
