--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -1,8 +1,8 @@
 <html lang="en">
   <head>
     <head>
-      <script src="https://staubtornado.github.io/kotmasters/loadHead.js"></script>
-      <link rel="stylesheet" href="https://staubtornado.github.io/kotmasters/about.css">
+      <script src="../../loadHead.js"></script>
+      <link rel="stylesheet" href="../../about.css">
       <meta
         name="description"
         content="Welcome to ABOUT the KOT. Dies ist die offizielle Kotmasters Aboutpage. Erkunden sie unser Team und Location."
@@ -11,7 +11,7 @@
   </head>
 
   <header>
-    <script src="https://staubtornado.github.io/kotmasters/loadHeader.js"></script>
+    <script src="../../loadHeader.js"></script>
   </header>
 
   <body>
@@ -69,7 +69,7 @@
     <h1 class="about_h">Ein Blick hinter die Kulissen</h1>
 
     <!--image slider start-->
-    <link rel="stylesheet" href="https://staubtornado.github.io/kotmasters/sliders.css" />
+    <link rel="stylesheet" href="../../sliders.css" />
     <div class="slider_body">
       <div class="slider">
         <div class="slides">
@@ -82,16 +82,16 @@
 
           <!--slide images start-->
           <div class="slide first">
-            <img src="https://raw.githubusercontent.com/Staubtornado/kotmasters/main/images/about/1.jpg" alt="" />
+            <img src="../../images/about/1.jpg" alt="" />
           </div>
           <div class="slide">
-            <img src="https://raw.githubusercontent.com/Staubtornado/kotmasters/main/images/about/2.jpg" alt="" />
+            <img src="../../images/about/2.jpg" alt="" />
           </div>
           <div class="slide">
-            <img src="https://raw.githubusercontent.com/Staubtornado/kotmasters/main/images/about/3.jpg" alt="" />
+            <img src="../../images/about/3.jpg" alt="" />
           </div>
           <div class="slide">
-            <img src="https://raw.githubusercontent.com/Staubtornado/kotmasters/main/images/about/4.jpg" alt="" />
+            <img src="../../images/about/4.jpg" alt="" />
           </div>
           <!--slide images end-->
 
@@ -145,6 +145,6 @@
   </body>
 
   <footer class="footer">
-    <script src="https://staubtornado.github.io/kotmasters/loadFooter.js"></script>
+    <script src="../../loadFooter.js"></script>
   </footer>
 </html>
