--- a/content/pages/contact.html
+++ b/content/pages/contact.html
@@ -1,6 +1,6 @@
 <html lang="en">
   <head>
-    <script src="https://staubtornado.github.io/kotmasters/loadHead.js"></script>
+    <script src="../../loadHead.js"></script>
     <link rel="stylesheet" href="/contact.css" />
     <link rel="stylesheet" href="/styles/sendbutton.css" />
     <meta
@@ -11,7 +11,7 @@
   </head>
 
   <header>
-    <script src="https://staubtornado.github.io/kotmasters/loadHeader.js"></script>
+    <script src="../../loadHeader.js"></script>
   </header>
 
   <body>
@@ -72,6 +72,6 @@
   </body>
 
   <footer class="footer">
-    <script src="https://staubtornado.github.io/kotmasters/loadFooter.js"></script>
+    <script src="../../loadFooter.js"></script>
   </footer>
 </html>
