--- a/content/pages/projects.html
+++ b/content/pages/projects.html
@@ -2,14 +2,14 @@
 
 <head>
     <link rel="stylesheet" href="/stylesheet.css">
-    <script src="https://staubtornado.github.io/kotmasters/loadHead.js"></script>
+    <script src="../../loadHead.js"></script>
     <link rel="stylesheet" href="/projects.css">
     <meta name="description" content="" />
     <title>Kotmasters</title>
 </head>
 
 <header>
-    <script src="https://staubtornado.github.io/kotmasters/loadHeader.js"></script>
+    <script src="../../loadHeader.js"></script>
 </header>
 
 <body>
@@ -80,7 +80,7 @@
 </body>
 
 <footer class="footer">
-    <script src="https://staubtornado.github.io/kotmasters/loadFooter.js"></script>
+    <script src="../../loadFooter.js"></script>
 </footer>
 
 </html>
