--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="loadHead.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <title>Kotmasters</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="shortcut icon" href="/images/icon.ico" />
 
     <meta
         name="description"
-        content="Offizielles Impressum von Kostmasters."
+        content="Offizielles Website von Kostmasters."
     />
 <link rel="stylesheet" href="stylesheet.css">
 <link rel="stylesheet" href="contactButton.css">
@@ -14,7 +19,14 @@
 </head>
 
 <header>
-  <script src="loadHeader.js"></script>
+  <a class="logo__font" href="/"><img class="logo" src="/images/logo.png" alt="logo">Kotmasters</a>
+  <nav>
+    <ul class="nav__links">
+      <li><a href="">Services</a></li>
+      <li><a href="/content/pages/about.html">About</a></li>
+      <li><a href="/content/pages/projects.html">Projects</a></li>
+  </nav>
+  <a class="cta" href="https://github.com/Staubtornado/kotmasters/discussions"><button>Contact</button></a>
 </header>
    
 <body>
@@ -91,6 +103,17 @@
 </body>    
 
 <footer class="footer">
-  <script src="loadFooter.js"></script> 
+  <ul class="fa">
+    <li><a href="https://www.instagram.com/kotmasters.official/" class="fa fa-instagram"></a></li>
+    <li><a href="https://www.facebook.com/" class="fa fa-facebook"></a></li>
+    <li><a href="https://github.com/Staubtornado/kotmasters" class="fa fa-github"></a></li>
+    <li><a href="https://twitter.com/" class="fa fa-twitter"></a></li>
+    <li><a href="https://www.reddit.com/" class="fa fa-reddit-alien"></a></li>
+</ul>  
+
+  <ul class="bottom_links">
+      <li><a href="content/legal/imprint.html">Impressum</a></li>
+      <li><a href="content/legal/datenschutzerklaerung.html">Datenschutzerklärung</a></li>
+  </ul>
 </footer>
 </html>
