--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -1,20 +1,20 @@
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      
+      <title>Kotmasters</title>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link rel="shortcut icon" href="/images/icon.ico" />
     
-    <title>Kotmasters</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="shortcut icon" href="/images/icon.ico" />
-  
-      <meta
-          name="description"
-          content="Offizielles Website von Kostmasters."
-      />
-  <link rel="stylesheet" href="../../stylesheet.css">
-  <link rel="stylesheet" href="../../contactButton.css">
-  <link rel="stylesheet" href="../../projects.css">
-  
+        <meta
+            name="description"
+            content="Offizielles Website von Kostmasters."
+        />
+    <link rel="stylesheet" href="../../stylesheet.css">
+    <link rel="stylesheet" href="../../contactButton.css">
+    <link rel="stylesheet" href="../../about.css">
+    <link rel="stylesheet" href="../../sliders.css"> 
   </head>
 
   <header>
