--- a/content/pages/contact.html
+++ b/content/pages/contact.html
@@ -1,31 +1,17 @@
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <title>Kotmasters</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="shortcut icon" href="/images/icon.ico" />
-  
-      <meta
-          name="description"
-          content="Offizielles Website von Kostmasters."
-      />
-  <link rel="stylesheet" href="../../stylesheet.css">
-  <link rel="stylesheet" href="../../contactButton.css">
-  <link rel="stylesheet" href="../../projects.css">
-  
+    <script src="https://staubtornado.github.io/kotmasters/loadHead.js"></script>
+    <link rel="stylesheet" href="/staubtornado.github.io-main/styles/sendbutton.css" />
+    <link rel="stylesheet" href="/staubtornado.github.io-main/stylesheet.css" />
+    <meta
+      name="description"
+      content="Welcome to Contact the KOT. Dies ist die offizielle Kotmasters conactpage. Erkunden Sie unsere Location und wie Sie zu Uns finden."
+    />
+    <title>Contact|Kotmasters</title>
   </head>
 
   <header>
-    <a class="logo__font" href="/"><img class="logo" src="/images/logo.png" alt="logo">Kotmasters</a>
-    <nav>
-      <ul class="nav__links">
-        <li><a href="">Services</a></li>
-        <li><a href="/content/pages/about.html">About</a></li>
-        <li><a href="/content/pages/projects.html">Projects</a></li>
-    </nav>
-    <a class="cta" href="https://github.com/Staubtornado/kotmasters/discussions"><button>Contact</button></a>
+    <script src="https://staubtornado.github.io/kotmasters/loadHeader.js"></script>
   </header>
 
   <body>
@@ -82,21 +68,10 @@
         <span class="check-two"></span>
       </div>
     </div>
-    
+
   </body>
 
   <footer class="footer">
-    <ul class="fa">
-      <li><a href="https://www.instagram.com/kotmasters.official/" class="fa fa-instagram"></a></li>
-      <li><a href="https://www.facebook.com/" class="fa fa-facebook"></a></li>
-      <li><a href="https://github.com/Staubtornado/kotmasters" class="fa fa-github"></a></li>
-      <li><a href="https://twitter.com/" class="fa fa-twitter"></a></li>
-      <li><a href="https://www.reddit.com/" class="fa fa-reddit-alien"></a></li>
-  </ul>  
-  
-    <ul class="bottom_links">
-        <li><a href="../legal/imprint.html">Impressum</a></li>
-        <li><a href="../legal/datenschutzerklaerung.html">Datenschutzerklärung</a></li>
-    </ul>
+    <script src="https://staubtornado.github.io/kotmasters/loadFooter.js"></script>
   </footer>
 </html>
