Added technical page

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
   <ul class="bottom_links">
       <li><a href="content/legal/imprint.html">Impressum</a></li>
       <li><a href="content/legal/datenschutzerklaerung.html">Datenschutzerklärung</a></li>
+      <li><a href="content/pages/technic.html"></a>Technik</li>
   </ul>
 </footer>
 </html>
