--- a/content/pages/contact.html
+++ b/content/pages/contact.html
@@ -69,6 +69,8 @@
       </div>
     </div>
 
+    <a href="https://github.com/staubtornado/staubtornado.github.io/discussions"></a>
+
   </body>
 
   <footer class="footer">
