Link to new ViewProject stylesheet + Create new viewProject class

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <link rel="stylesheet" href="stylesheet.css">
 <link rel="stylesheet" href="contactButton.css">
 <link rel="stylesheet" href="projects.css">
+ <link rel="stylesheet" href="viewProject.css">
 
 </head>
 
@@ -52,7 +53,7 @@
           <div>HTML, CSS, JavaScript</div>
         <h6>Tools:</h6>
           <div>Visual Studio Code, GitHub Pages</div>
-        <a href=""><button>View Project ></button></a>
+        <a class="viewProject" href="test.html">View Project</a>
       </div>
     </li>
     
@@ -65,7 +66,7 @@
             <div>Java</div>
           <h6>Tools:</h6>
             <div>IntelliJ IDEA</div>
-          <a href=""><button>View Project ></button></a>
+         <a class="viewProject" href="test.html">View Project</a>
         </div>
       </li>
 
@@ -81,7 +82,7 @@
           <div>Python 3.9.7</div>
         <h6>Tools:</h6>
           <div>PyCharm</div>
-        <a href="https://github.com/Staubtornado/11-BGI-Bot"><button>View Project ></button></a>
+        <a class="viewProject" href="https://github.com/Staubtornado/11-BGI-Bot">View Project</a>
       </div>
     </li>
     
@@ -94,7 +95,7 @@
             <div>Python 3.9.7</div>
           <h6>Tools:</h6>
             <div>PyCharm, ffmpeg</div>
-          <a href=""><button>View Project ></button></a>
+          <a class="viewProject" href="test.html">View Project</a>
         </div>
       </li>
 
