--- a/content/pages/projects.html
+++ b/content/pages/projects.html
@@ -14,7 +14,6 @@
         />
     <link rel="stylesheet" href="../../stylesheet.css">
     <link rel="stylesheet" href="../../contactButton.css">
-    <link rel="stylesheet" href="../../projects.css">
     
 </head>
 
@@ -25,6 +24,7 @@
         <li><a href="">Services</a></li>
         <li><a href="/content/pages/about.html">About</a></li>
         <li><a href="/content/pages/projects.html">Projects</a></li>
+      </ul>
     </nav>
     <a class="cta" href="https://github.com/Staubtornado/kotmasters/discussions"><button>Contact</button></a>
 </header>
@@ -102,13 +102,15 @@
         <li><a href="https://www.facebook.com/" class="fa fa-facebook"></a></li>
         <li><a href="https://github.com/Staubtornado/kotmasters" class="fa fa-github"></a></li>
         <li><a href="https://twitter.com/" class="fa fa-twitter"></a></li>
-        <li><a href="https://www.reddit.com/" class="fa fa-reddit-alien"></a></li>
-    </ul>  
-    
-      <ul class="bottom_links">
-          <li><a href="../legal/imprint.html">Impressum</a></li>
-          <li><a href="../legal/datenschutzerklaerung.html">Datenschutzerklärung</a></li>
-      </ul>
+        <!--    <li><a href="https://www.reddit.com/" class="fa fa-reddit-alien"></a></li>-->
+        <li><a href="https://open.spotify.com/playlist/4VZLJoO22qn8WWNhtZ6qra?si=71bfc55cc0ef41aa" class="fa fa-spotify"></a></li>
+    </ul>
+
+    <ul class="bottom_links">
+        <li><a href="../legal/imprint.html">Impressum</a></li>
+        <li><a href="../legal/data.html">Datenschutzerklärung</a></li>
+        <li><a href="../pages/technology.html">Technik</a></li>
+    </ul>
 </footer>
 
 </html>
