--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <h3>Offizielle Website</h3>
         <p>Unsere offizielle Website, welche planmäßig Anfang 2022 fertiggestellt wird.</p>
         <h6>Sprachen:</h6>
-          <div>HTML, CSS, JavaScript</div>
+          <div>HTML, CSS, JavaScript, SCSS</div>
         <h6>Tools:</h6>
           <div>Visual Studio Code, GitHub Pages</div>
         <a class="viewProject" href="test.html">View Project</a>
@@ -109,13 +109,14 @@
     <li><a href="https://www.facebook.com/" class="fa fa-facebook"></a></li>
     <li><a href="https://github.com/Staubtornado/kotmasters" class="fa fa-github"></a></li>
     <li><a href="https://twitter.com/" class="fa fa-twitter"></a></li>
-    <li><a href="https://www.reddit.com/" class="fa fa-reddit-alien"></a></li>
+<!--    <li><a href="https://www.reddit.com/" class="fa fa-reddit-alien"></a></li>-->
+    <li><a href="https://open.spotify.com/playlist/4VZLJoO22qn8WWNhtZ6qra?si=71bfc55cc0ef41aa" class="fa fa-spotify"></a></li>
 </ul>  
 
   <ul class="bottom_links">
       <li><a href="content/legal/imprint.html">Impressum</a></li>
-      <li><a href="content/legal/datenschutzerklaerung.html">Datenschutzerklärung</a></li>
-      <li><a href="content/pages/technic.html"></a>Technik</li>
+      <li><a href="content/legal/data.html">Datenschutzerklärung</a></li>
+      <li><a href="content/pages/technology.html">Technik</a></li>
   </ul>
 </footer>
 </html>
