some css for contact form

--- a/content/pages/contact.html
+++ b/content/pages/contact.html
@@ -1,8 +1,9 @@
 <html lang="en">
   <head>
     <script src="https://staubtornado.github.io/kotmasters/loadHead.js"></script>
-    <link rel="stylesheet" href="/staubtornado.github.io-main/styles/sendbutton.css" />
-    <link rel="stylesheet" href="/staubtornado.github.io-main/stylesheet.css" />
+    <link rel="stylesheet" href="/stylesheet.css" />
+    <link rel="stylesheet" href="/styles/sendbutton.css" />
+    <link rel="stylesheet" href="/styles/contact.css">
     <meta
       name="description"
       content="Welcome to Contact the KOT. Dies ist die offizielle Kotmasters conactpage. Erkunden Sie unsere Location und wie Sie zu Uns finden."
@@ -15,8 +16,6 @@
   </header>
 
   <body>
-    <h1 class="heading">Unsere Location</h1>
-
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d636.1972324659109!2d8.0196685!3d50.3704901!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bdcd3dfa58ecdd%3A0x4b2388fc734e196e!2sBahnhof%20Diez!5e0!3m2!1sde!2sde!4v1638374783525!5m2!1sde!2sde"
       width="100%"
@@ -26,7 +25,7 @@
       loading="lazy"
     ></iframe>
 
-    <h1 class="heading">Contact us</h1>
+    <h1>Contact us</h1>
 
     <fieldset>
       <br />
@@ -69,8 +68,8 @@
       </div>
     </div>
 
-    <a href="https://github.com/staubtornado/staubtornado.github.io/discussions"></a>
-
+    <a  href="https://github.com/staubtornado/staubtornado.github.io/discussions"></a>
+    
   </body>
 
   <footer class="footer">
