--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   </ul>
 
-  <ul class="short_summary">
+  <ul id="bgi_bot">
     <li>
       <img src="/images/projects/project_3.png" alt="project_1">
       <div>
@@ -85,12 +85,15 @@
         <a class="viewProject" href="https://github.com/Staubtornado/11-BGI-Bot">View Project</a>
       </div>
     </li>
-    
+    </ul>
+    <ul id="music_bot">
       <li>
         <img src="/images/projects/project_4.png" alt="project_2">
         <div>
           <h3>Musik - Bot</h3>
-          <p>Ein ultimativer Musikbot, welcher Spotify- und YouTube Musikstreaming auf Discord erlaubt. Höre Topsongs von Künstlern, Playlists, Albums und einzelne Songs ohne Werbung direkt per Link.</p> 
+          <p>Ein ultimativer Musikbot, welcher Spotify- und YouTube Musikstreaming auf Discord erlaubt.
+           
+             Höre Topsongs von Künstlern, Playlists, Albums und einzelne Songs ohne Werbung direkt per Link.</p> 
           <h6>Sprachen:</h6>
             <div>Python 3.9.7</div>
           <h6>Tools:</h6>
