--- a/content/pages/projects.html
+++ b/content/pages/projects.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="de">
 
 <head>
     <meta charset="UTF-8" />
@@ -10,7 +10,7 @@
     
         <meta
             name="description"
-            content="Offizielles Website von Kostmasters."
+            content="Offizielles Website von Kotmasters."
         />
     <link rel="stylesheet" href="../../stylesheet.css">
     <link rel="stylesheet" href="../../contactButton.css">
