--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,7 +10,7 @@
 
     <meta
         name="description"
-        content="Offizielles Website von Kostmasters."
+        content="Offizielles Website von Kotmasters."
     />
 <link rel="stylesheet" href="stylesheet.css">
 <link rel="stylesheet" href="contactButton.css">
@@ -26,6 +26,7 @@
       <li><a href="">Services</a></li>
       <li><a href="/content/pages/about.html">About</a></li>
       <li><a href="/content/pages/projects.html">Projects</a></li>
+    </ul>
   </nav>
   <a class="cta" href="https://github.com/Staubtornado/kotmasters/discussions"><button>Contact</button></a>
 </header>
@@ -35,7 +36,6 @@
     Willkommen auf der Seite der Kotmasters. Wir sind ein deutsches Entwicklerstudio und arbeiten seit unserer Gründung im September 2021 an kleinen Java Programmen, Python Skripten und Webdesign mit HTML und CSS. Ab 2022 planen wir einen Einstieg in die Spieleindustrie und ab 2025 wollen wir Vorreiter in der deutschsprachigen Spiele- und Softwareentwicklung sein. Weitere Informationen findest du 
       <a href="/content/pages/about.html"><u>hier</u></a>.
       <div class="infotext__unterschrift">- Kotmasters 2021</div>
-  </p> 
 
   <div class="description">
     <h2 >Populäre Projekte</h2>
