--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -9,7 +9,7 @@
     
         <meta
             name="description"
-            content="Offizielles Website von Kostmasters."
+            content="Offizielles Website von Kotmasters."
         />
     <link rel="stylesheet" href="../../stylesheet.css">
     <link rel="stylesheet" href="../../contactButton.css">
@@ -24,6 +24,7 @@
         <li><a href="">Services</a></li>
         <li><a href="/content/pages/about.html">About</a></li>
         <li><a href="/content/pages/projects.html">Projects</a></li>
+      </ul>
     </nav>
     <a class="cta" href="https://github.com/Staubtornado/kotmasters/discussions"><button>Contact</button></a>
   </header>
@@ -132,7 +133,8 @@
     
     <!-- script for autoplay -->
     <script type="text/javascript">
-      var counter = 1;
+      let counter = 1;
+
       function setcounter(x){
         counter = x;
       }
