Replaced placeholder images with real production-ready images, minor improvements in other files

--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -46,7 +46,7 @@
     <div class="container">
       <img
         class="img_about"
-        src="platzhalter.jpg"
+        src="../../images/about/leaders.png"
         alt="dahin kommen noch imgs"
       />
       <div class="content">
