--- a/content/pages/contact.html
+++ b/content/pages/contact.html
@@ -1,9 +1,6 @@
 <html lang="en">
   <head>
-    <script src="https://staubtornado.github.io/kotmasters/loadHead.js"></script>
-    <link rel="stylesheet" href="/stylesheet.css" />
-    <link rel="stylesheet" href="/styles/sendbutton.css" />
-    <link rel="stylesheet" href="/styles/contact.css">
+    <link rel="stylesheet" href="../../styles/css/contact.css" />
     <meta
       name="description"
       content="Welcome to Contact the KOT. Dies ist die offizielle Kotmasters conactpage. Erkunden Sie unsere Location und wie Sie zu Uns finden."
@@ -11,9 +8,9 @@
     <title>Contact|Kotmasters</title>
   </head>
 
-  <header>
-    <script src="https://staubtornado.github.io/kotmasters/loadHeader.js"></script>
-  </header>
+<!--  <header>-->
+
+<!--  </header>-->
 
   <body>
     <iframe
