--- a/content/pages/projects.html
+++ b/content/pages/projects.html
@@ -12,8 +12,7 @@
             name="description"
             content="Offizielles Website von Kotmasters."
         />
-    <link rel="stylesheet" href="../../stylesheet.css">
-    <link rel="stylesheet" href="../../contactButton.css">
+    <link rel="stylesheet" href="../../styles/css/projects.css">
     
 </head>
 
