--- a/content/pages/technology.html
+++ b/content/pages/technology.html
@@ -11,8 +11,7 @@
             name="description"
             content="Offizielles Website von Kotmasters."
         />
-    <link rel="stylesheet" href="../../stylesheet.css">
-    <link rel="stylesheet" href="../../contactButton.css">
+    <link rel="stylesheet" href="../../styles/css/home.css">
 </head>
 
 <header>
@@ -41,8 +40,6 @@
 
         <h2>Aufbau</h2>
     </div>
-
-
 </body>
 
 <footer>
