--- a/content/legal/imprint.html
+++ b/content/legal/imprint.html
@@ -11,10 +11,7 @@
             name="description"
             content="Offizielles Website von Kotmasters."
         />
-    <link rel="stylesheet" href="../../stylesheet.css">
-    <link rel="stylesheet" href="../../contactButton.css">
-    <link rel="stylesheet" href="../../projects.css">
-    
+    <link rel="stylesheet" href="../../styles/css/legal.css">
 </head>
 
 <header>    
