--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -11,10 +11,7 @@
             name="description"
             content="Offizielles Website von Kotmasters."
         />
-    <link rel="stylesheet" href="../../stylesheet.css">
-    <link rel="stylesheet" href="../../contactButton.css">
-    <link rel="stylesheet" href="../../about.css">
-    <link rel="stylesheet" href="../../sliders.css"> 
+    <link rel="stylesheet" href="../../styles/css/about.css">
   </head>
 
   <header>
