--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
         name="description"
         content="Offizielles Website von Kotmasters."
     />
-<link rel="stylesheet" href="stylesheet.css">
-<link rel="stylesheet" href="contactButton.css">
-<link rel="stylesheet" href="projects.css">
- <link rel="stylesheet" href="viewProject.css">
+<link rel="stylesheet" href="/styles/css/home.css">
 
 </head>
 
