--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <img src="/images/projects/project_2.png" alt="project_2">
         <div>
           <h3>Werterechner</h3>
-          <p>Ein ultimativer Werterechner, welche Nullstellen, Quersummen, Fakultät, BMI etc. berechnen kann.</p> 
+          <p>Ein ultimativer Werterechner, welcher Nullstellen, Quersummen, Fakultät, BMI etc. berechnen kann.</p>
           <h6>Sprachen:</h6>
             <div>Java</div>
           <h6>Tools:</h6>
