--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <div class="description">
     <h2 >Populäre Projekte</h2>
-    <a href="">Alle anzeigen</a>
+    <a href="/content/pages/projects.html">Alle anzeigen</a>
   </div>
   
 
@@ -73,7 +73,7 @@
     <li>
       <img src="/images/projects/project_3.png" alt="project_1">
       <div>
-        <h3>11 BGI - Bot</h3>
+        <h3>11 BGI Bot</h3>
         <p>Offizieller Bot für den Klassenserver auf Discord. Beinhaltet Spiele wie Hangman oder TicTacToe, ein Levelsystem und Statistiken.</p>
         <h6>Sprachen:</h6>
           <div>Python 3.9.7</div>
@@ -87,7 +87,7 @@
       <li>
         <img src="/images/projects/project_4.png" alt="project_2">
         <div>
-          <h3>Musik - Bot</h3>
+          <h3>Musikbot</h3>
           <p>Ein ultimativer Musikbot, welcher Spotify- und YouTube Musikstreaming auf Discord erlaubt.
            
              Höre Topsongs von Künstlern, Playlists, Albums und einzelne Songs ohne Werbung direkt per Link.</p> 
@@ -109,7 +109,6 @@
     <li><a href="https://www.facebook.com/" class="fa fa-facebook"></a></li>
     <li><a href="https://github.com/Staubtornado/kotmasters" class="fa fa-github"></a></li>
     <li><a href="https://twitter.com/" class="fa fa-twitter"></a></li>
-<!--    <li><a href="https://www.reddit.com/" class="fa fa-reddit-alien"></a></li>-->
     <li><a href="https://open.spotify.com/playlist/4VZLJoO22qn8WWNhtZ6qra?si=71bfc55cc0ef41aa" class="fa fa-spotify"></a></li>
 </ul>  
 
