added cards on about (still buggy)

--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -8,18 +8,15 @@
       name="description"
       content="Offizielle Website von Kotmasters.gov"
     />
-
     <title>About | Kotmasters</title>
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="shortcut icon" href="/images/icon.ico" />
     <link rel="stylesheet" href="../../styles/css/about.css" />
   </head>
 
   <header>
-    <a class="logo__font" href="/"
-      ><img class="logo" src="/images/logo.png" alt="logo" />Kotmasters</a
-    >
+    <a class="logo__font" href="/"><img class="logo" src="/images/logo.png" alt="logo" />Kotmasters</a>
     <nav>
       <ul class="nav__links">
         <li><a href="">Services</a></li>
@@ -27,9 +24,7 @@
         <li><a href="/content/pages/projects.html">Projects</a></li>
       </ul>
     </nav>
-    <a class="cta" href="https://github.com/Staubtornado/kotmasters/discussions"
-      ><button>Contact</button></a
-    >
+    <a class="cta" href="https://github.com/Staubtornado/kotmasters/discussions"><button>Contact</button></a>
   </header>
 
   <body>
@@ -53,45 +48,29 @@
       Projektanfrage.
     </p>
 
+
     <h1 class="about_h">Das ist unsere Führungsebene</h1>
 
-    <div class="container">
-      <img
-        class="img_about"
-        src="../../images/about/leaders.png"
-        alt="dahin kommen noch imgs"
-      />
-      <div class="content">
-        <p class="about_p">
-          <em>"Lead Bot-Programmer"</em> und<em> "King of if - else"</em> :
-          Julian aka. "Staubtornado"
-        </p>
+    <div class="card" id="erste">
+      <div class="profile-sidebar">
+        <img class="profile-image"src="https://i.pravatar.cc//125" alt="">
+        <ul class="social-list">
+          <li class="social-item">
+            <a class="social-link" href="#"></a><i class="fab fa-discord"></i></a>
+          </li>
+          <li class="social-item">
+            <a class="social-link" href="#"><i class="fab fa-github"></i></a>
+          </li>
+          <li class="social-item">
+            <a class="social-link" href="#"><i class="fab fa-instagram"></i></a>
+          </li>
+        </ul>
       </div>
-    </div>
-
-    <div class="container">
-      <img
-        class="img_about"
-        src="platzhalter.jpg"
-        alt="dahin kommen noch imgs"
-      />
-      <div class="content">
-        <p class="about_p">
-          <em>Master of Design</em> und <em>Communitymanager</em>: Max aka.
-          "Discera"
-        </p>
-      </div>
-    </div>
-
-    <div class="container">
-      <img
-        class="img_about"
-        src="platzhalter.jpg"
-        alt="dahin kommen noch imgs"
-      />
-      <div class="content">
-        <p class="about_p">
-          und <em>Lead Frontend-Developer</em>: Jannis aka. "Daywalker"
+      <div class="profile-main">
+        <h2 class="profile-name">Hier Name</h2>
+        <p class="profile-position">King of Tech</p>
+        <p class="profile-body">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi nisi consequatur quasi porro a vero perspiciatis asperiores in expedita dicta libero nemo pariatur placeat, at soluta voluptatem aliquam laboriosam cupiditate!
         </p>
       </div>
     </div>
