Fixed some typos and changed defalt langaue to de

--- a/content/pages/projects.html
+++ b/content/pages/projects.html
@@ -1,4 +1,4 @@
-<html lang="deu">
+<html lang="de">
 
   <head>
     <meta
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
       name="description"
-      content="Offizielle Website von Kotmasters.gov"
+      content="Offizielle Website von Kotmasters"
     />
 
     <title>Projects | Kotmasters</title>
