--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -1,4 +1,4 @@
-<html lang="deu">
+<html lang="de">
 
   <head>
     <meta
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
       name="description"
-      content="Offizielle Website von Kotmasters.gov"
+      content="Offizielle Website von Kotmasters"
     />
     <title>About | Kotmasters</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
